2005-09-03  Bruno coudoin  <bruno.coudoin@free.fr>


	* boards/memory_tux.xml.in: set it back to difficulty 2
	* docs/screenshots/colors.jpg: moved name
	* docs/screenshots/colors1.jpg:
	* docs/screenshots/colors1_small.jpg:
	* docs/screenshots/colors_small.jpg:
	* docs/spip_menuboard.xsl: fixed sub menu error

2005-09-02  Bruno coudoin  <bruno.coudoin@free.fr>

	reviewed by: <delete if not using a buddy>

	* boards/memory_tux.xml.in:

2005-09-02  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/gcompris/misc/raquette.png: fixed to make it clickeable
	* boards/music/background/Brahms_Johannes-String_Quartet_C_minor_Op
	_51_mvmt_4.ogg: renamed, name too long
	* boards/music/background/Brahms__Johannes_-_String_Quartet_C_minor
	__Op_51_mvmt_4.ogg:
	* docs/create_thumbnails.pl: fixed, do not overwrite created thumbs
	* docs/gcompris2spip.pl: fixed menu creation.

2005-09-01  Yves Combe  <yves@ycombe.net>

	add more trace ofr the strange segfault

	* src/boards/reading.c: (reading_next_level), (item_event_valid):

	*** RELEASE 7.0.0PRE1 ***

2005-09-01  Bruno coudoin  <bruno.coudoin@free.fr>

	set difficulty to 0 to hide it even if it is ready.
	will set it to 2 after.

	* boards/memory_tux.xml.in:

2005-09-01  Yves Combe  <yves@ycombe.net>

	improve menmory_tux UI marking scores.
	adapt memory to make less difficult the board.

	* src/boards/memory.c: (start_board), (update_scores),
	(memory_next_level), (create_item), (hide_card):

2005-09-01  Yves Combe  <yves@ycombe.net>

	add new mode in memory.c: Play against the computer.
	That makes a new board: /boards/memory_tux

	* boards/Makefile.am:
	* boards/boardicons/memory_tux.png:
	* boards/memory_tux.xml.in:
	* src/boards/memory.c: (get_random_token), (pause_board),
	(start_board), (end_board), (memory_next_level),
	(memory_destroy_all_items), (get_image), (create_item),
	(player_win), (display_card), (hide_card), (item_event),
	(add_card_in_tux_memory), (compare_card),