@@ -10,7 +10,10 @@
 	 <_title>GCompris Administration Menu</_title>
 	 <_description>Left-Click with the mouse to select an activity</_description>
 	 <_prerequisite></_prerequisite>
-	 <_goal></_goal>
-	 <_manual xml:space="preserve"></_manual>
+         <_goal>If you want to fine tune GCompris to your needs, you can use the administration module here. The ultimate goal is to provide reporting usage by user. This is mandatory for parents and teacher who want to analyse the progress, strength and weakeness of their kids.</_goal>
+         <_manual>- In the 'Boards' section you can change the list of activities. Just untoggle them in the treeview. You can change the language for reading and for example the sound language for colors.
+- You can save multiple configurations, and switch easily. In the 'Profile' section add a profile, then in the 'Board' section select the profile in the combobox and after select the boards you want to be active. You can add lot of
+profiles, with differents list of boards, differents language. You select the active profile to be used by default in the 'Profile' section by using the default button. You can also choose a profile from the command line.
+- You can add users, class and for each class, you can create groups of users. Note that you can import users from a comma separated file too. In a profile put one or more groups. In this case the login will appears at next GCompris start. Having the kids identified in GCompris let us provide reporting for each kid. It is also to let kids teach reading or typing their names (login is configurable).</_manual>
   </Board>
 </GCompris>
