@@ -1,3 +1,10 @@
+2005-09-04  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* boards/administration.xml.in: added documentation (edited from Yves)
+	* configure.in: added Vietnamese
+	* docs/gcompris2spip.pl: -
+	* src/gcompris/config.c: -
+
 2005-09-03  Bruno coudoin  <bruno.coudoin@free.fr>
 
 
